thesis ivy feedback

--- a/thesis/background-ml.tex
+++ b/thesis/background-ml.tex
@@ -16,7 +16,7 @@ Machine learning was once described to me by an anonymous supervisor as ``the st
         \begin{equation}
             f : \mathcal X \to \mathcal Y.
         \end{equation}
-        $\mathcal X$ and $\mathcal Y$ are commonly (but certainly not always) a real vector space $\mathbb R^n$. Because the goal of machine learning involves \emph{finding} a suitable function $f$ for the task at hand, the set of functions is usually constrained. For example, if $\mathcal X = \mathbb{R}^n$, we might require that $f$ is a linear function $\mathbb R^n \to \mathbb R$, easily parametrised by $n + 1$ constants. This constraint is called a \defn{model}.
+        $\mathcal X$ and $\mathcal Y$ are commonly (but certainly not always) a real vector space $\mathbb R^n$. Because the goal of machine learning involves \emph{finding} a suitable function $f$ for the task at hand, the set of functions is usually constrained. For example, if $\mathcal X = \mathbb{R}^n$, we might require that $f$ is a linear function $\mathbb R^n \to \mathbb R$, easily parametrised by $n + 1$ constants. This constraint is called a \defn{model}. Models are often (but not always) parametrised and training the model refers to finding a good set of parameters. The parameters are sometimes called \defn{weights}. To avoid ambiguity, parameters of the model that are not changed during training are called \defn{hyperparameters} and may include regularisation terms, constraints, or variations of the model.
 
         Some predictors can be described as a probabilistic model. In this case a predictor is a joint probability distribution between observations and hidden parameters \citep{deisenroth_mathematics_2020}. Using a probabilistic predictor allows us to formally describe and work with uncertainty both in the input space and output space. Such a predictor is usually parametrised by a finite set of parameters, which already includes most common probability distributions.
 
@@ -29,13 +29,13 @@ Machine learning was once described to me by an anonymous supervisor as ``the st
 
         \defn{Classification} is the machine learning task of predicting discrete, unstructured values \citep{deisenroth_mathematics_2020}. These values are called \defn{classes}. Classification is arguably the most important prediction task, as many other problems can be formalised as classification. Astronomy has its fair share of classification tasks, from classical astronomy tasks like galaxy morphology classification \citep[appearing in machine learning literature as e.g.][]{dieleman15cnn} to transient detection \citep[e.g.][]{scalzo_skymapper_2017}; see \autoref{sec:classification-of-agn} for more examples.
 
-        A classification problem seeks a predictor where $\mathcal Y$ is a finite, discrete set of classes. Classification tasks are usually delineated by the number of classes: much like astronomy's fascination with metals, classification tasks either have two classes or more than two classes. The former are called \defn{binary classification} tasks and the latter are \defn{multiclass classification} tasks. The reason for this split is that binary classes are dramatically easier to reason about and analyse, and many special cases exist for binary where they do not for multiclass.
+        A classification problem seeks a predictor where $\mathcal Y$ represents a finite, discrete set of classes. Classification tasks are usually delineated by the number of classes: much like astronomy's fascination with metals, classification tasks either have two classes or more than two classes. The former are called \defn{binary classification} tasks and the latter are \defn{multiclass classification} tasks. The reason for this split is that binary classes are dramatically easier to reason about and analyse, and many special cases exist for binary where they do not for multiclass.
 
         $\mathcal Y$ for a binary task is usually represented as $\mathcal Y = \{0, 1\}$. $1$ is called the \defn{positive class}; $0$ is called the \defn{negative class}.
 
         An easy way to see why many tasks can be formalised as classification can be found by taking any prediction problem $\mathcal X \to \mathcal Y$ and reinterpreting it as the binary classification problem $\mathcal X \times \mathcal Y \to \{0, 1\}$, i.e. instead of taking an input and predicting an output, take an input and a potential output and determine if they should be related. Of course this is not always the most efficient way to solve a prediction problem but the many known properties of classification make it an appealing framework to cast problems into. In \autoref{cha:cross-id}, I will cast the radio astronomy problem of cross-matching galaxies seen in different wavelengths into a binary classification problem, and in \autoref{cha:faraday} I will classify radio observations as Faraday complex or Faraday simple.
 
-        \todo{What does it mean for a classifier to return a value from 0 to 1? What is a probabilistic classifier? Scores vs class probabilities vs predicted classes.}
+        There are three different formalisms for the output of a binary classifier. The output may be a \defn{score}, a \defn{class probability estimate}, or a \defn{predicted class}. A predicted class is what first comes to mind as a representation of binary classes: the classifier outputs either 0 or 1, with no way of representing ambiguity. A class probability estimate is a number from 0 to 1 which represents the probability that an example is in the positive class, i.e. if $f$ is a classifier then $f(x) = p(y = 1 \mid x)$. Class probability estimates may be output by probabilistic classifiers, or may be estimated from non-probabilistic classifiers. Finally, a score is a value that tends to be larger for elements of the positive class, with less ambiguous examples being given a higher score. Scores are often converted into class probability estimates by applying a sigmoid (see \autoref{sec:logistic-regression}). There are multiple ways to generalise these concepts to multiclass classification. Having a score or a class probability estimate can be more useful than only having a predicted class. For example, you could sort your examples by how likely they are to be a member of the positive class. This underpins our approach to casting cross-identification as binary classification in \autoref{cha:cross-id}.
 
     \subsection{Regression}
     \label{sec:regression}
@@ -60,7 +60,7 @@ Machine learning was once described to me by an anonymous supervisor as ``the st
 
     What should the loss function be for a given problem? The answer is not always obvious. Take for example a binary classification problem. The ``obvious'' loss would be the complement of the accuracy: the rate at which the predictor incorrectly guesses the label. This is easy to compute and we would like our predictor to have a high accuracy. But this is not a good choice: it is tremendously hard to work with as it takes on discrete values, because the accuracy is the number of correct predictions divided by the total number of examples. It is hard to motivate with probabilistic arguments. Finally, it is unclear how the accuracy should work in the case of a probabilistic model.
 
-    Instead, the loss function is usually derived by making assumptions on the structure of the data and task. The main assumption we usually make is that data are drawn \defn{independently and identically distributed} (IID), that is, each example is drawn from the same distribution and is not dependent on any other examples. We also assume a structure of the noise in the observed labels: training data are almost never completely accurate, and so there will be intrinsic noise in the distribution of labels about their unobserved ``true'' value. To demonstrate these assumptions, we will now derive loss functions for regression and binary classification. The loss function we derive depends on the model we assume for the noise, for example, assuming Gaussian noise gives us the common least-squares loss.
+    Instead, the loss function is usually derived by making assumptions on the structure of the data and task. The main assumption we usually make is that data are drawn \defn{independently and identically distributed} (IID), that is, each example is drawn from the same distribution and is not dependent on any other examples. We also assume a structure of the noise in the observed labels: training data are almost never completely accurate, and so there will be intrinsic noise in the distribution of labels about their unobserved ``true'' value. To demonstrate these assumptions, we will now derive loss functions for regression and binary classification. The loss function we derive depends on the model we assume for the noise; for example, assuming Gaussian noise gives us the common least-squares loss.
 
         \subsection{Loss function for regression}
         \label{sec:loss-regression}
@@ -161,22 +161,22 @@ Machine learning was once described to me by an anonymous supervisor as ``the st
             \label{eq:logistic-function}
             \sigma(a) = \frac{1}{1 + e^{-a}}.
         \end{equation}
-        The output of logistic regression applied to an example $x$ is the probability that $x$ is in the positive class. $\sigma$, and thus logistic regression, has a domain of $(-\infty, \infty)$ and a range of $(0, 1)$. This enforces the output to be like a probability. $w^T x$ defines a $d$-dimensional hyperplane, called the \defn{separating hyperplane} or \defn{decision surface}. Logistic regression is differentiable, which allows us to optimise its parameters $w$ using gradient descent. Interpreting the classifier is possible through examining the weights vector, with a larger absolute value of a weight corresponding to a `more important' feature.
+        The output of logistic regression applied to an example $x$ is the probability that $x$ is in the positive class. $\sigma$, and thus logistic regression, has a domain of $(-\infty, \infty)$ and a range of $(0, 1)$. This enforces the output to be like a probability. $w^T x= 0$ defines a $d$-dimensional hyperplane, called the \defn{separating hyperplane} or \defn{decision surface}. Logistic regression is differentiable, which allows us to optimise its parameters $w$ using gradient descent. Interpreting the classifier is possible through examining the weights vector, with a larger absolute value of a weight corresponding to a `more important' feature. The weights from logistic regression can be used to produce scores or class probability estimates (\autoref{sec:classification}): $w^T x$ is a score, $\sigma(x^T x)$ is a class probability estimate, and thresholding either the score or the class probability estimate at $0$ gives a discrete class.
 
         A limitation of logistic regression is its sensitivity to scale. Features need to be of approximately the same order of magnitude and should have a standard deviation of approximately 1. An implicit assumption is that each features has a mean of 0 across the dataset. This can be enforced by normalising and scaling: subtract the mean of the dataset and divide by the new standard deviation.
 
-        We apply logistic regression to binary classification problems in \autoref{cha:cross-id} and \autoref{cha:faraday}. \todo{reflect on scores/class probabilities/predicted classes}
+        We apply logistic regression to binary classification problems in \autoref{cha:cross-id} and \autoref{cha:faraday}.
 
     \subsection{Decision tree ensembles}
     \label{sec:decision-trees}
 
-        A \defn{decision tree} is a non-linear classifier. It repeatedly splits a dataset based on binary comparisons until every subset contains only one class (or mostly one class, with the amount of purity left as a hyperparameter\todo{define hyperparameter}). Each split only uses one feature for the comparison, making decision trees relatively easy to visualise and interpret. However, because of this, each split is axis-parallel, which can be a limitation for some datasets. They are not sensitive to scale and do not require a zero mean, making them easy to apply without preprocessing a dataset.
+        A \defn{decision tree} is a non-linear classifier. It repeatedly splits a dataset based on binary comparisons until every subset contains only one class (or mostly one class, with the amount of purity left as a hyperparameter). Each split only uses one feature for the comparison, making decision trees relatively easy to visualise and interpret. However, because of this, each split is axis-parallel, which can be a limitation for some datasets. They are not sensitive to scale and do not require a zero mean, making them easy to apply without preprocessing a dataset.
 
         Key limitations of a decision tree are:
         \begin{itemize}
             \item They can only output a prediction, not a confidence of this prediction or a score of how likely an instance is to be found within each class.
             \item Small changes to the dataset or training method can result in large changes to the tree.
-            \item They have high variance\todo{define variance}.
+            \item They tend toward overfitting the training set.
             \item With many low-information features, decision trees have quite poor performance \citep{breiman01random-forest}.
         \end{itemize}
 
