--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -5277,3 +5277,121 @@ Publisher: Nature Publishing Group},
 	urldate = {2021-02-01},
 	file = {Polarization properties of extragalactic radio sources. - NASA/ADS:C\:\\Users\\matthew\\Zotero\\storage\\QS4XSG3B\\1988ARA&A..26...html:text/html}
 }
+
+@article{hlozek_results_2020,
+	title = {Results of the {Photometric} {LSST} {Astronomical} {Time}-series {Classification} {Challenge} ({PLAsTiCC})},
+	volume = {2012},
+	url = {http://adsabs.harvard.edu/abs/2020arXiv201212392H},
+	abstract = {Next-generation surveys like the Legacy Survey of Space and Time (LSST) 
+on the Vera C. Rubin Observatory will generate orders of magnitude more
+discoveries of transients and variable stars than previous surveys. To
+prepare for this data deluge, we developed the Photometric LSST
+Astronomical Time-series Classification Challenge (PLAsTiCC), a
+competition which aimed to catalyze the development of robust
+classifiers under LSST-like conditions of a non-representative training
+set for a large photometric test set of imbalanced classes. Over 1,000
+teams participated in PLAsTiCC, which was hosted in the Kaggle data
+science competition platform between Sep 28, 2018 and Dec 17, 2018,
+ultimately identifying three winners in February 2019. Participants
+produced classifiers employing a diverse set of machine learning
+techniques including hybrid combinations and ensemble averages of a
+range of approaches, among them boosted decision trees, neural networks,
+and multi-layer perceptrons. The strong performance of the top three
+classifiers on Type Ia supernovae and kilonovae represent a major
+improvement over the current state-of-the-art within astronomy. This
+paper summarizes the most promising methods and evaluates their results
+in detail, highlighting future directions both for classifier
+development and simulation needs for a next generation PLAsTiCC data
+set.},
+	urldate = {2021-02-07},
+	journal = {arXiv e-prints},
+	author = {Hlo{\v z}ek, R. and Ponder, K. A. and Malz, A. I. and Dai, M. and Narayan, G. and Ishida, E. E. O. and Allam, Jr, T. and Bahmanyar, A. and Biswas, R. and Galbany, L. and Jha, S. W. and Jones, D. O. and Kessler, R. and Lochner, M. and Mahabal, A. A. and Mandel, K. S. and Mart{\'i}nez-Galarza, J. R. and McEwen, J. D. and Muthukrishna, D. and Peiris, H. V. and Peters, C. M. and Setzer, C. N.},
+	month = dec,
+	year = {2020},
+	keywords = {Astrophysics - High Energy Astrophysical Phenomena, Astrophysics - Instrumentation and Methods for Astrophysics, Astrophysics - Cosmology and Nongalactic Astrophysics},
+	pages = {arXiv:2012.12392},
+	file = {Full Text PDF:C\:\\Users\\matthew\\Zotero\\storage\\2MC56JLL\\Hlo{\v z}ek et al. - 2020 - Results of the Photometric LSST Astronomical Time-.pdf:application/pdf}
+}
+
+@article{machado_poletti_valle_shaping_2020,
+	title = {{SHAPing} the {Gas}: {Understanding} {Gas} {Shapes} in {Dark} {Matter} {Haloes} with {Interpretable} {Machine} {Learning}},
+	volume = {2011},
+	shorttitle = {{SHAPing} the {Gas}},
+	url = {http://adsabs.harvard.edu/abs/2020arXiv201112987M},
+	abstract = {The non-spherical shapes of dark matter and gas distributions introduce 
+systematic uncertainties that affect observable-mass relations and
+selection functions of galaxy groups and clusters. However, the triaxial
+gas distributions depend on the non-linear physical processes of halo
+formation histories and baryonic physics, which are challenging to model
+accurately. In this study we explore a machine learning approach for
+modelling the dependence of gas shapes on dark matter and baryonic
+properties. With data from the Illustris-TNG hydrodynamical cosmological
+simulations, we develop a machine learning pipeline that applies
+XGBoost, an implementation of gradient boosted decision trees, to
+predict radial profiles of gas shapes from halo properties. We show that
+XGBoost models can accurately predict gas shape profiles in dark matter
+haloes. We also explore model interpretability with SHAP, a method that
+identifies the most predictive properties at different halo radii. We
+find that baryonic properties best predict gas shapes in halo cores,
+whereas dark matter shapes are the main predictors in the halo
+outskirts. This work demonstrates the power of interpretable machine
+learning in modelling observable properties of dark matter haloes in the
+era of multi-wavelength cosmological surveys.},
+	urldate = {2021-02-07},
+	journal = {arXiv e-prints},
+	author = {Machado Poletti Valle, Luis Fernando and Avestruz, Camille and Barnes, David J. and Farahi, Arya and Lau, Erwin T. and Nagai, Daisuke},
+	month = nov,
+	year = {2020},
+	keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics},
+	pages = {arXiv:2011.12987},
+	file = {Full Text PDF:C\:\\Users\\matthew\\Zotero\\storage\\ULVWKBJ8\\Machado Poletti Valle et al. - 2020 - SHAPing the Gas Understanding Gas Shapes in Dark .pdf:application/pdf}
+}
+
+@article{kapinska_radio_2017,
+	title = {Radio {Galaxy} {Zoo}: {A} {Search} for {Hybrid} {Morphology} {Radio} {Galaxies}},
+	volume = {154},
+	issn = {1538-3881},
+	shorttitle = {Radio {Galaxy} {Zoo}},
+	url = {https://doi.org/10.3847/1538-3881/aa90b7},
+	doi = {10.3847/1538-3881/aa90b7},
+	abstract = {Hybrid morphology radio sources (HyMoRS) are a rare type of radio galaxy that display different Fanaroff{\textendash}Riley classes on opposite sides of their nuclei. To enhance the statistical analysis of HyMoRS, we embarked on a large-scale search of these sources within the international citizen science project, Radio Galaxy Zoo (RGZ). Here, we present 25 new candidate hybrid morphology radio galaxies. Our selected candidates are moderate power radio galaxies ( W Hz-1 sr-1) at redshifts . Hosts of nine candidates have spectroscopic observations, of which six are classified as quasars, one as high- and two as low-excitation galaxies. Two candidate HyMoRS are giant ( Mpc) radio galaxies, one resides at the center of a galaxy cluster, and one is hosted by a rare green bean galaxy. Although the origin of the hybrid morphology radio galaxies is still unclear, this type of radio source starts depicting itself as a rather diverse class. We discuss hybrid radio morphology formation in terms of the radio source environment (nurture) and intrinsically occurring phenomena (nature; activity cessation and amplification), showing that these peculiar radio galaxies can be formed by both mechanisms. While high angular resolution follow-up observations are still necessary to confirm our candidates, we demonstrate the efficacy of the RGZ in the pre-selection of these sources from all-sky radio surveys, and report the reliability of citizen scientists in identifying and classifying complex radio sources.},
+	language = {en},
+	number = {6},
+	urldate = {2021-02-17},
+	journal = {The Astronomical Journal},
+	author = {Kapi{\'n}ska, A. D. and Terentev, I. and Wong, O. I. and Shabala, S. S. and Andernach, H. and Rudnick, L. and Storer, L. and Banfield, J. K. and Willett, K. W. and Gasperin, F. de and Lintott, C. J. and L{\'o}pez-S{\'a}nchez, {\'A} R. and Middelberg, E. and Norris, R. P. and Schawinski, K. and Seymour, N. and Simmons, B.},
+	month = nov,
+	year = {2017},
+	note = {Publisher: American Astronomical Society},
+	pages = {253},
+	file = {IOP Full Text PDF:C\:\\Users\\matthew\\Zotero\\storage\\43LFN3W2\\Kapi{\'n}ska et al. - 2017 - Radio Galaxy Zoo A Search for Hybrid Morphology R.pdf:application/pdf}
+}
+
+@article{gopal-krishna_extragalactic_2000,
+	title = {Extragalactic radio sources with hybrid morphology: implications for the {Fanaroff}-{Riley} dichotomy},
+	volume = {363},
+	issn = {0004-6361},
+	shorttitle = {Extragalactic radio sources with hybrid morphology},
+	url = {http://adsabs.harvard.edu/abs/2000A%26A...363..507G},
+	abstract = {We provide observational and theoretical perspectives on the currently 
+much debated issue of the Fanaroff-Riley (FR) morphological dichotomy of
+extragalactic radio sources. In this context we introduce a new, albeit
+rare, class of double radio sources in which the two lobes exhibit
+clearly different FR morphologies. It is argued that such `HYbrid
+MOrphology Radio Sources', or HYMORS, could be used to effectively
+constrain the theoretical mechanisms proposed for the FR dichotomy.
+Basically, the existence of HYMORS supports explanations for the FR
+dichotomy based upon jet interaction with the medium external to the
+central engine, and appears quite difficult to reconcile with the class
+of explanations that posit fundamental differences in the central
+engine, such as black hole spin or jet composition, to be responsible
+for the two FR classes of double radio sources.},
+	urldate = {2021-02-17},
+	journal = {Astronomy and Astrophysics},
+	author = {{Gopal-Krishna} and Wiita, P. J.},
+	month = nov,
+	year = {2000},
+	keywords = {BLACK HOLE PHYSICS, CD, GALAXIES: ACTIVE, GALAXIES: ELLIPTICAL AND LENTICULAR, GALAXIES: JETS, GALAXIES: NUCLEI, RADIO CONTINUUM: GALAXIES},
+	pages = {507--516},
+	file = {Full Text PDF:C\:\\Users\\matthew\\Zotero\\storage\\TS3VTGZF\\Gopal-Krishna and Wiita - 2000 - Extragalactic radio sources with hybrid morphology.pdf:application/pdf}
+}
